# libprocess

./: .gitignore  CMakeLists.txt  README.md
cmake/: dependencies.cmake  libprocess-config.cmake.in  libprocess.pc.in
src/: CMakeLists.txt  common.hxx  demonic.cpp  ioutils.cxx  ioutils.hxx  subprocess.cpp
src/include/tarp/: demonic.hpp  subprocess.hpp
tests/: CMakeLists.txt  main_test_subprocess.cpp
